# RDeciderBot

./: .gitignore  .pre-commit-config.yaml  RDeciderBot.py  README.md  bot.py  pyproject.toml
app/: __init__.py  __main__.py  config.py  log.py
app/commands/: add.py  choose.py  clear.py  delete.py  help.py  see.py  start.py
