[tool.poetry]
name = "rdeciderbot"
version = "1.0.0"
description = "Decider bot for telegram"
authors = ["Gabriel Anzola <ga.anzola15@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
python-telegram-bot = "^20.1"
python-dotenv = "^1.0.0"
pre-commit = "^3.1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
